sort.basic.bubble.AlgBubbleSort3.scala.error
Compilation error:
AlgBubbleSort3:7: error: illegal start of simple pattern
                             var = var + 1}
                                 ^AlgBubbleSort3:7: error: '=' expected but '}' found.
                             var = var + 1}
                                          ^